# willhea.github.io

./: .gitignore  404.html  AGENTS.md  CNAME  MIGRATION.md  Makefile  README.md  archives.html  authors.html  categories.html  how_i_built_this_site.html  hugo.yaml  index.html  index.json  index.xml  llms.txt  money-market.html  national-links-trust.html  notes.md  pelicanconf.py  pelicanconf.sync-conflict-20250902-141651-Q2HWKMB.py  publishconf.py  pyproject.toml  requirements.txt  robots.txt  site.css  sitemap.xml  skeptical_labs_goals.html  tags.html  test-2.html  test.html  timeline_vs_runway.html  why_willhea.html
about/: index.html
archetypes/: default.md
author/: will-hea.html
categories/: index.html  index.xml
category/: blog.html  misc.html  test.html
contact/: index.html
content/: 1_why_willhea.md  2_how_I_built_this_site.md  about.md  contact.md  dives.md  hello-blog.md  portfolio.md  search.md  test2.md
feeds/: all.atom.xml  blog.atom.xml  misc.atom.xml  test.atom.xml
output/: 404.html  archives.html  authors.html  categories.html  index.html  site.css  site.sync-conflict-20250902-113550-Q2HWKMB.css  site.sync-conflict-20250902-121250-Q2HWKMB.css  site.sync-conflict-20250902-121749-Q2HWKMB.css  site.sync-conflict-20250902-122539-Q2HWKMB.css  site.sync-conflict-20250902-122549-Q2HWKMB.css  site.sync-conflict-20250902-125009-Q2HWKMB.css  site.sync-conflict-20250902-125039-Q2HWKMB.css  site.sync-conflict-20250902-125350-Q2HWKMB.css  tags.html  test-2.html  test.html
pages/: about.html  contact.html
plans/: hugo-migration.md
posts/: index.html  (+1 more)
(+207 files in other folders)
