[project]
name = "willhea-blog"
version = "1.0.0"
description = "Personal blog and website for willhea.com built with Pelican"
readme = "README.md"
requires-python = ">=3.13"
license = {text = "MIT"}
authors = [
    {name = "Will Hea"}
]

dependencies = [
    "pelican==4.11.0",
    "Markdown==3.8.2",
    "Jinja2==3.1.6",
    "ghp-import==2.1.0",
    "fabric==3.2.2",
    "invoke==2.2.0",
    "beautifulsoup4==4.13.5",
    "feedgenerator==2.2.1",
    "Pygments==2.18.0",
    "typogrify==2.1.0",
    "smartypants==2.0.2",
    "python-dateutil==2.9.0.post0",
    "rich==14.1.0",
    "watchfiles==1.1.0",
    "pelican-sitemap>=1.2.2",
]

[project.urls]
Repository = "https://github.com/willhea/willhea.github.io_private"
Homepage = "https://willhea.com"
